# plaster-terrazite-ai

./: .env.example  LICENSE  Makefile  README.md  app.py  check_recipes_structure.py  create_component_mapping_corrected.py  create_test_excel.py  final_check.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements-ml.txt  requirements.txt  run_tests.py  setup.py  setup.sh  streamlit_app.py  test_fixed_dataset.py  test_full_pipeline.py  test_model_basic.py
data/raw/: Рецептуры терразит.xlsx
notebooks/: 01_data_analysis.ipynb
scripts/: create_data_manifest.py  create_test_images.py  create_test_images_final.py  create_test_images_working.py  prepare_image_dataset.py  process_excel.py  run_pipeline.py  train_model.py
src/api/: handlers.py  main.py  schemas.py
src/data/: __init__.py  augmentor.py  component_analyzer.py  loader.py  processor.py  visualizer.py
src/models/: __init__.py  evaluator.py  simple_classifier.py  terrazite_model.py  trainer.py
src/utils/: config.py  logger.py
tests/models/: __init__.py  test_data_loader.py  test_terrazite_model.py
