[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plaster-terrazite-ai"
version = "1.0.0"
description = "AI system for terrazite plaster recipe prediction from images"
readme = "README.md"
authors = [
    {name = "Terrazite AI Team", email = "team@terrazite-ai.example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.1.3",
    "numpy>=1.24.3",
    "Pillow>=10.0.1",
    "opencv-python-headless>=4.8.1",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "python-multipart>=0.0.6",
    "joblib>=1.3.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "matplotlib>=3.8.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.5",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.3.2",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
ml = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "scikit-image>=0.22.0",
    "imgaug>=0.4.0",
    "albumentations>=1.3.1",
    "transformers>=4.36.0",
    "mlflow>=2.9.2",
    "wandb>=0.16.0",
    "xgboost>=2.0.2",
    "lightgbm>=4.1.0",
    "catboost>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/plaster-terrazite-ai"
Repository = "https://github.com/yourusername/plaster-terrazite-ai"
Issues = "https://github.com/yourusername/plaster-terrazite-ai/issues"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "**/tests/*",
    "**/__pycache__/*",
    "**/*.pyc",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
