# pyproject.toml (оптимизированная версия)
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrazite-ai"
version = "1.2.0"
description = "AI система для подбора рецепта терразитовой штукатурки по фото"
readme = "README.md"
authors = [
    {name = "Terrazite AI Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"

# Основные зависимости для работы
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=2.1.0",
    "numpy>=1.23.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "openpyxl>=3.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
# Для разработки и тестирования
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
# Для ML экспериментов
ml = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "tensorboard>=2.15.0",
]
# Минимальные для продакшена
minimal = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/anskydy-tz/plaster-terrazite-ai"
"Bug Reports" = "https://github.com/anskydy-tz/plaster-terrazite-ai/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["terrazite_ai*"]  # если переименуете пакет

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''
